examples/test/testpolicy10263.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy10263
  namespace: namespace90
spec:
  podSelector:
    matchLabels:
      key29: value1
      key18: value7
      key34: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value8
          key6: value12
      podSelector:
        matchLabels:
          key17: value40
          key28: value15
          key39: value18
